Verion 0.9.43dev (?? ??? 2003)
  - Fixed bug 769755: Saturday events not showing in week view (negative offset)
  - Check for magic_quotes_gpc.  If not enabled, fatal exit and tell user
    to modify php.ini.
  - Fixed bug: add icon appeared in printer friendly view pages (view_m.php...)
  - Fixed bug 792731: NIS login failure
  - Fixed bug 609900: wrong week number
  - Fixed bug 761793: invalid weeknumber
  - Fixed bug 607788: Number of week
  - Week Number now calculated using ISO 8601 specifications
  - Fixed bug 787788: Can't enter event beginning st midnight
  - Fixed bug 783487: SQL error on saving existing report
  - Fixed bug 760236: Timezone Offset is buggy in edit_entry_handler.php
  - Fixed bug 669434: time zone offset with week_ssi.php problem
  - Fixed bug 686288: Time Zone corrections
  - Fixed bug: TZ_OFFSET was not being used when setting $today, $thisdate, etc
  - Fixed bug: was not saving reports as global as requested
  - Fixed bug 765229: Export a repeating event in VCS
  - Added repeating info and alarm info to vcal export (works in Palm Desk.)
  - Fixed bug 779668: Event colors on nonuser admin page
  - Allow preferences to be set for nonuser cals (only nonuser admin will see)
  - Fixed bug 777524: Fixed preference issues with language.  Also
    fixed translation of "Public Access" into other languages.
  - When editing an event and changing the category, allow admin users to
    also change the category saved for the public user.
  - Fixed bug 772197: Oracle insert error for new reports
  - Fixed bug: printer-friendly link on report page lost user and
    offset info.
  - Updated palm & vcal import tools to support new repeat type (monthlyByDayR)
  - Updated Finnish translation
  - Updated German translation
  - Updated Dutch translation
  - Updated Chinese-GB2312 translation
Verion 0.9.42 (21 Jul 2003)
  - Added admin options for nonuser calendars
  - Fixed bug 760236: Timezone Offset is buggy in edit_entry_handler.php